<resources>
    <string name="facebook_app_id">2215354485461489</string>
    <string name="fb_login_protocol_scheme">fb2215354485461489</string>
    <string name="server_client_id">648723575971-b87dqi6tdpuor0epam9dckrvuhc3n9cf.apps.googleusercontent.com</string>
    <string name="app_name">MDate</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="ok">Ok</string>
    <string name="mobile_no">Phone Number</string>
    <string name="sign_fb">Log in with Facebook</string>
    <string name="enter_country_code">Choose Country Code</string>
    <string name="enter_mobile_no">Enter Phone Number</string>
    <string name="or">Or</string>
    <string name="otp">OTP</string>
    <string name="entr_otp">Enter verification code</string>
    <string name="entr_email_verif_code">Enter Email verification code</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend Code</string>
    <string name="edit_mobile">Edit Your Phone Number</string>
    <string name="edit_email">Edit Your Email</string>
    <string name="alert">MDate</string>
    <string name="enter_fname">Enter First Name</string>
    <string name="enter_lname">Enter Last Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_motto">Enter Profile Motto</string>
    <string name="enter_about">Enter About Me</string>
    <string name="upload_error">Can\'t upload more than 5 photos</string>
    <string name="set_profile_pic">Before continue please set Profile Picture.</string>
    <string name="age_error">You should be 18+ to join MDate</string>
    <string name="done">Done</string>
    <string name="fName">First Name</string>
    <string name="finish">FINISH</string>
    <string name="lName">Last Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="next">Next</string>
    <string name="profile_motto">Profile Motto</string>
    <string name="type_profile_motto">Introduce yourself with a short summary</string>
    <string name="about">About me</string>
    <string name="tellus_about">A little more about yourself...</string>
    <string name="set_as_profile">Set as Profile Picture</string>
    <string name="login_with_fon">LOG IN WITH PHONE NUMBER</string>
    <string name="login_with_email">LOG IN WITH EMAIL</string>
    <string name="terms_and_privacy">
        <font>By logging in, You Agree to our</font>
    </string>
    <string name="official_modern_muslim">The Official Modern Muslim Dating</string>
    <string name="already_registered">You are already a registered user</string>
    <string name="goto_home">Go to home</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="delete_pic">Are you sure you want to delete this image?</string>
    <string name="terms_title">Terms &amp; Privacy Policy</string>
    <string name="terms">
        <u>Terms</u>
    </string>
    <string name="and">&amp;</string>
    <string name="privacy">
        <u>Privacy Policy</u>
    </string>
    <string name="aster">
        <font size="40">*</font>
    </string>
    <string name="occupation">Occupation</string>
    <string name="height">Height</string>
    <string name="education">Education</string>
    <string name="marital_status">Marital status</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="children">Children</string>
    <string name="language">Languages</string>
    <string name="branch">Sect</string>
    <string name="current_location">Current Location</string>
    <string name="family_origin">Country of Origin</string>
    <string name="interests">Interests</string>
    <string name="about_title">About</string>
    <string name="centimeter">Centimeters</string>
    <string name="family_alert">Can\'t add more than 2 origin.</string>
    <string name="ancestor_origin">Country of Origin</string>
    <string name="interest_alert">Interest already exist</string>
    <string name="high_school">High school</string>
    <string name="my_profile">My Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="basic_account">Basic Account</string>
    <string name="upgrade_premium">Upgrade to Premium</string>
    <string name="unlimited_swipes">Unlimited swipes</string>
    <string name="no_ads">No ads</string>
    <string name="kept_matches">Kept matches until you delete it</string>
    <string name="advance_filter">Premium Filters</string>
    <string name="one_quick_msg">One quick message per day direct without match</string>
    <string name="spam_or_fake">Spam</string>
    <string name="inappropriate_foto">Inappropriate Photos Or Content</string>
    <string name="report">Report</string>
    <string name="other">Other</string>
    <string name="report_alert">Select any one reason to report.</string>
    <string name="filters">Filters</string>
    <string name="basic_filters">Basic Filters</string>
    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="premium_filters">Premium Filters</string>
    <string name="continue_lbl">Continue</string>
    <string name="clear_all">Clear All</string>
    <string name="location">Location</string>
    <string name="write_here">Please specify</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_for_expired_chat">Please subscribe to MDate+ for retrieving your expired chat</string>
    <string name="upgrade_for_more_features">Please subscribe to MDate+ for more features</string>
    <string name="subscribe_for_6_mnth">Subscribe for 6 Months</string>
    <string name="no_user_alert">No more profiles.\nExpand your search in filters or check back soon</string>
    <string name="type_reason">Type the reason</string>
    <string name="message">Messages</string>
    <string name="new_matches">New Matches</string>
    <string name="write_message">Write Message....</string>
    <string name="typing_now">Typing Now..</string>
    <string name="unmatch">UNMATCH</string>
    <string name="quick_mesg">Quick Message Request</string>
    <string name="today">Today</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="block">BLOCK</string>
    <string name="settings">Settings</string>
    <string name="account_type">Account Type</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="type_promo_code">Type Your Promo Code</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="ur_profile">Your profile will be hidden, but you still be able to chat with your matches</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="quick_message">Quick Message</string>
    <string name="select_language">Select Language</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="social_media_pages">Social Media Pages</string>
    <string name="help">Help</string>
    <string name="login_account">Login Account</string>
    <string name="facebook">Facebook</string>
    <string name="phone_number">Phone Number</string>
    <string name="account_settings">Account Settings</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete_account">Delete Account</string>
    <string name="terms_and_privacy_str">Terms &amp; Privacy Policy</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="note_otp"></string>
    <string name="select_country">Select Country</string>
    <string name="activity">Activity</string>
    <string name="clear_conversation">Clear Conversation</string>
    <string name="unmatch_user">Unmatch</string>
    <string name="block_user">Block</string>
    <string name="delete_account_str">Are you sure you want to delete\n Your account?</string>
    <string name="no">No</string>
    <string name="default_channel_name">General Channel</string>
    <string name="default_channel_unique_name">general</string>
    <string name="years">Age between</string>
    <string name="miles">miles</string>
    <string name="tenmiles">25 miles</string>
    <string name="something_went_wrong">Something went wrong please try after some time</string>
    <string name="server_not_working">Server is not working, Please try after some time</string>
    <string name="internet_connection">Internet connection is not available. Please check it and try again</string>
    <string name="thirtysec">30sec</string>
    <string-array name="array_education">
        <item></item>
        <item>@string/high_school</item>
        <item>College</item>
        <item>Undergraduate degree</item>
        <item>Graduate degree</item>
        <item>Doctorate</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="array_branch">
        <item></item>
        <item>Sunni</item>
        <item>Shia</item>
        <item>Other</item>
    </string-array>
    <string-array name="array_marital">
        <item></item>
        <item>Never Married</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="array_language">
        <item></item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="array_ethnicity">
        <item></item>
        <item>Arab</item>
        <item>Asian</item>
        <item>Bengali</item>
        <item>Black/African</item>
        <item>Caucasian /White</item>
        <item>Hispanic/Latino</item>
        <item>Indian</item>
        <item>Kurdish</item>
        <item>Pakistani</item>
        <item>Persian</item>
        <item>Turkish</item>
        <item>Mixed Race</item>
        <item>Other Ethnicity</item>
    </string-array>
</resources>