<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.dating.mdate.ui.login.LoginViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_app_bg">

            <ImageView
                    android:layout_width="@dimen/space_200"
                    android:layout_height="@dimen/space_100"
                    app:srcCompat="@drawable/mdate_white_logo"
                    android:id="@+id/imageView2"
                    android:layout_marginTop="@dimen/space_40"
                    android:layout_marginBottom="@dimen/space_70"
                    app:layout_constraintBottom_toTopOf="@+id/btnContinue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <com.dating.mdate.utill.MyMediumButton
                    android:id="@+id/btnContinue"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_50"
                    android:layout_marginLeft="@dimen/space_40"
                    android:padding="@dimen/space_10"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginRight="@dimen/space_40"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toTopOf="@id/layoutFB"
                    android:onClick="@{viewModel::onClickOpenMobile}"
                    android:text="@string/login_with_fon"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/space_30"
                    android:background="@drawable/white_background_border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <com.dating.mdate.utill.MyMediumButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_50"
                    android:onClick="@{viewModel::loginwithGoogle}"
                    android:layout_marginLeft="@dimen/space_40"
                    android:padding="@dimen/space_10"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginBottom="@dimen/space_80"
                    android:layout_marginRight="@dimen/space_40"
                    android:textAllCaps="false"
                    android:text="@string/login_with_email"
                    android:textColor="@color/white"
                    android:background="@drawable/white_background_border"
                    android:layout_marginTop="@dimen/space_20"
                    app:layout_constraintBottom_toTopOf="@+id/tvTerms"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <android.support.constraint.ConstraintLayout
                    android:id="@+id/layoutFB" android:layout_width="0dp"
                    android:layout_height="@dimen/space_50"
                    android:layout_marginRight="@dimen/space_40"
                    app:layout_constraintBottom_toTopOf="@id/btnGoogle"
                    android:onClick="@{viewModel::loginwithFB}"
                    android:layout_marginBottom="@dimen/space_30"
                    android:background="@drawable/facebook_btn"
                    android:layout_marginLeft="@dimen/space_40"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                        android:id="@+id/imgFB"
                        android:layout_width="@dimen/space_20" android:layout_height="@dimen/space_20"
                        app:srcCompat="@drawable/icon_fb" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/btnFB" app:layout_constraintVertical_bias="0.533"/>
                <com.dating.mdate.utill.MyMediumButton
                        android:id="@+id/btnFB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/space_10"
                        android:paddingRight="@dimen/space_10"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="@android:color/transparent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="@dimen/text_size_15"
                        android:text="@string/sign_fb"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>
            <com.dating.mdate.utill.MyMediumTextView
                    android:id="@+id/tvTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:lineSpacingExtra="@dimen/space_5"
                    app:layout_constraintBottom_toTopOf="@id/layoutTitle"
                    android:textSize="@dimen/text_size_15"
                    android:gravity="center"
                    android:text="@string/terms_and_privacy"/>
            <android.support.constraint.ConstraintLayout
                    android:id="@+id/layoutTitle" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
                <com.dating.mdate.utill.MyMediumTextView
                        android:id="@+id/tvTer"
                        android:layout_width="60dp"
                        android:layout_height="33dp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:textSize="@dimen/text_size_15"
                        android:padding="@dimen/space_5"
                        android:gravity="center"
                        android:text="@string/terms"/>
                <com.dating.mdate.utill.MyMediumTextView
                        android:id="@+id/tvAnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/tvTer"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="@dimen/text_size_15"
                        android:padding="@dimen/space_5"
                        android:gravity="center"
                        android:text="@string/and"/>
                <com.dating.mdate.utill.MyMediumTextView
                        android:id="@+id/tvPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/tvAnd"
                        app:layout_constraintTop_toTopOf="parent"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:textSize="@dimen/text_size_15"
                        android:padding="@dimen/space_5"
                        android:gravity="center"
                        android:text="@string/privacy"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>