<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.dating.mdate.ui.dashboard.activity.ProfileViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_light_gray">
            <FrameLayout
                    android:id="@+id/profilefram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_20"
                    android:paddingRight="@dimen/space_20"
                    android:paddingBottom="@dimen/space_20"
                    android:paddingTop="@dimen/space_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent">
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                             android:layout_height="wrap_content"
                                                             android:paddingBottom="@dimen/space_20"
                                                             android:background="@drawable/profile_grey_border"
                                                             android:layout_marginTop="@dimen/space_70">
                    <com.dating.mdate.utill.MyBoldTextView
                            android:id="@+id/tvName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginTop="@dimen/space_150"
                            android:padding="@dimen/space_5"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_16"
                            android:gravity="center"
                            android:text="@string/my_profile"/>

                    <com.dating.mdate.utill.MyMediumTextView
                            android:id="@+id/tvViewProfile"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/pink_btn"
                            android:padding="@dimen/space_5"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvName"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_15"
                            android:gravity="center"
                            android:text="@string/view_profile"/>
                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvBasicAcc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvViewProfile"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/basic_account"/>

                    <com.dating.mdate.utill.MyBoldButton
                            android:id="@+id/btnContinue"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/space_50"
                            android:layout_marginLeft="@dimen/space_20"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/space_10"
                            android:gravity="center"
                            android:textSize="@dimen/text_size_20"
                            android:layout_marginRight="@dimen/space_20"
                            android:textAllCaps="false"
                            app:layout_constraintTop_toBottomOf="@+id/tvBasicAcc"
                            android:text="@string/upgrade_premium"
                            android:textColor="@color/white"
                            android:layout_marginTop="@dimen/space_30"
                            android:background="@drawable/greadient_btn_bg"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>


                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvUnLimited"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnContinue"
                            android:layout_marginTop="@dimen/space_30"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/unlimited_swipes"/>
                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvNoAd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            android:visibility="gone"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvUnLimited"
                            android:layout_marginTop="@dimen/space_25"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/no_ads"/>
                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvKeptMatch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            android:visibility="gone"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvUnLimited"
                            android:layout_marginTop="@dimen/space_25"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/kept_matches"/>
                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvAdvanceFi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvKeptMatch"
                            android:layout_marginTop="@dimen/space_25"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/advance_filter"/>

                    <com.dating.mdate.utill.MyRegularTextView
                            android:id="@+id/tvOneQ"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/basic_grey"
                            android:padding="@dimen/space_5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAdvanceFi"
                            android:layout_marginBottom="@dimen/space_20"
                            android:layout_marginTop="@dimen/space_25"
                            android:lineSpacingExtra="@dimen/space_5"
                            android:textSize="@dimen/text_size_14"
                            android:gravity="center"
                            android:text="@string/one_quick_msg"/>
                </android.support.constraint.ConstraintLayout>
                <FrameLayout android:layout_width="@dimen/space_230" android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal">
                    <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imgPic1"
                            android:layout_width="@dimen/space_200"
                            android:layout_height="@dimen/space_200"
                            android:src="@drawable/img_profile_placeholder"
                            android:padding="@dimen/space_2"
                            app:riv_border_width="@dimen/space_2"
                            android:layout_gravity="center_horizontal"
                            app:riv_border_color="@color/my_profile_grey"
                            app:riv_corner_radius="@dimen/space_230"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                    />
                    <ImageView
                            android:id="@+id/btnEditProfile"
                            android:layout_width="@dimen/space_60" android:layout_height="@dimen/space_60"
                            android:layout_marginTop="@dimen/space_60"
                            android:layout_gravity="end|center"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:background="@drawable/ic_edit_my_profile"/>


                </FrameLayout>


            </FrameLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>